--- a/example/ecValidate-beta.html
+++ b/example/ecValidate-beta.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
+        body{
+            margin-bottom: 2000px;
+        }
         .m-from-box {
             margin: 100px auto;
             border: 1px solid #ccc;
             width: 400px;
-            height: 200px;
+            min-height: 200px;
             border-radius: 10px;
             text-align: center;
         }
@@ -63,44 +66,55 @@
     <!--校验单个字段-->
     <div class="m-from-box">
         <p><input type="text" class="u-input-text" placeholder="请输入姓名" v-model="demo1.userName"></p>
-        <p><input type="text" class="u-input-text" placeholder="请输入电话或者邮箱" v-model="demo1.userContact"></p>
-        <p class="u-tips">{{demo1.tips}}</p>
+        <p><input type="text" class="u-input-text" placeholder="请输入电话号码" v-model="demo1.userContact"></p>
+        <p class="u-tips" :class="{'success':demo1.tips==='success'}">{{demo1.tips}}</p>
         <p><input type="button" class="u-btn-submit" value="提交" @click="handleSubmit1"></p>
     </div>
-    <!--校验单个字段，带别名定位-->
+    <!--单个字段，多个规则-->
     <div class="m-from-box">
-        <p><input type="text" class="u-input-text" placeholder="请输入姓名" v-model="demo2.userName"
-                  :class="{'err':demo2.tips.userName}"></p>
-        <p class="u-tips">{{demo2.tips.userName}}</p>
-        <p><input type="text" class="u-input-text" placeholder="请输入电话或者邮箱" v-model="demo2.userContact"
-                  :class="{'err':demo2.tips.contact}"></p>
-        <p class="u-tips">{{demo2.tips.contact}}</p>
-        <p class="u-tips success" v-if="demo2.tips==='success'">提交成功</p>
+        <p><input type="text" class="u-input-text" placeholder="请输入姓名" v-model="demo2.userName"></p>
+        <p><input type="text" class="u-input-text" placeholder="请输入电话或者邮箱" v-model="demo2.userContact"></p>
+        <p class="u-tips" :class="{'success':demo2.tips==='success'}">{{demo2.tips}}</p>
         <p><input type="button" class="u-btn-submit" value="提交" @click="handleSubmit2"></p>
     </div>
-
+    <!--单个字段，扩展规则-->
+    <div class="m-from-box">
+        <p><input type="text" class="u-input-text" placeholder="请输入姓名" v-model="demo3.userName"></p>
+        <p class="u-tips" :class="{'success':demo3.tips==='success'}">{{demo3.tips}}</p>
+        <p><input type="button" class="u-btn-submit" value="提交" @click="handleSubmit3"></p>
+    </div>
+    <!--校验单个字段，带别名定位第一个有误数据-->
+    <div class="m-from-box">
+        <p><input type="text" class="u-input-text" placeholder="请输入姓名" v-model="demo4.userName"
+                  :class="{'err':demo4.tips.userName}"></p>
+        <p class="u-tips">{{demo4.tips.userName}}</p>
+        <p><input type="text" class="u-input-text" placeholder="请输入电话或者邮箱" v-model="demo4.userContact"
+                  :class="{'err':demo4.tips.contact}"></p>
+        <p class="u-tips">{{demo4.tips.contact}}</p>
+        <p class="u-tips success" v-if="demo4.tips==='success'">提交成功</p>
+        <p><input type="button" class="u-btn-submit" value="提交" @click="handleSubmit4"></p>
+    </div>
     <!--校验全部-->
     <div class="m-from-box">
-        <p><input type="text" class="u-input-text" placeholder="请输入姓名" v-model="demo3.userName"
-                  :class="{'err':demo3.tips.userName}"></p>
-        <p class="u-tips">{{demo3.tips.userName}}</p>
-        <p><input type="text" class="u-input-text" placeholder="请输入电话或者邮箱" v-model="demo3.userContact"
-                  :class="{'err':demo3.tips.contact}"></p>
-        <p class="u-tips">{{demo3.tips.contact}}</p>
-        <p class="u-tips success" v-if="demo3.tips==='success'">提交成功</p>
-        <p><input type="button" class="u-btn-submit" value="提交" @click="handleSubmit3"></p>
+        <p><input type="text" class="u-input-text" placeholder="请输入姓名" v-model="demo5.userName"
+                  :class="{'err':demo5.tips.userName}"></p>
+        <p class="u-tips">{{demo5.tips.userName}}</p>
+        <p><input type="text" class="u-input-text" placeholder="请输入电话或者邮箱" v-model="demo5.userContact"
+                  :class="{'err':demo5.tips.contact}"></p>
+        <p class="u-tips">{{demo5.tips.contact}}</p>
+        <p class="u-tips success" v-if="demo5.tips==='success'">提交成功</p>
+        <p><input type="button" class="u-btn-submit" value="提交" @click="handleSubmit5"></p>
     </div>
     <!--单个输入，实时校验-->
     <div class="m-from-box">
-        <p><input type="text" class="u-input-text" placeholder="请输入电话或者邮箱" v-model="demo4.userContact"
-                  :class="{'err':demo4.tips&&demo4.tips!=='success'}"  @input="handleInput4"></p>
-        <p class="u-tips" v-if="demo4.tips!=='success'">{{demo4.tips}}</p>
-        <p class="u-tips success" v-else>输入成功</p>
+        <p><input type="text" class="u-input-text" placeholder="请输入电话或者邮箱" v-model="demo6.userContact"
+                  :class="{'err':demo6.tips&&demo6.tips!=='success'}"  @input="handleInput6"></p>
+        <p class="u-tips" :class="{'success':demo6.tips==='success'}">{{demo6.tips}}</p>
     </div>
     <!--单个输入，实时校验-密码强度-->
     <div class="m-from-box">
-        <p><input type="text" class="u-input-text" placeholder="请输入密码" v-model="demo5.pwd"  @input="handleInput5"></p>
-        <p class="u-tips" :class="'lv'+demo5.tips" v-show="demo5.tips">密码强度：{{demo5.tips}}</p>
+        <p><input type="text" class="u-input-text" placeholder="请输入密码" v-model="demo7.pwd"  @input="handleInput7"></p>
+        <p class="u-tips" :class="'lv'+demo7.tips" v-show="demo7.tips">密码强度：{{demo7.tips}}</p>
     </div>
 </div>
 
@@ -126,20 +140,29 @@
                 tips: ''
             },
             demo2: {
-                userName: '',
+                userName: '守候',
                 userContact: '',
-                tips: {}
+                tips: ''
             },
             demo3: {
                 userName: '',
+                tips: ''
+            },
+            demo4: {
+                userName: '',
                 userContact: '',
                 tips: {}
             },
-            demo4: {
+            demo5: {
+                userName: '',
+                userContact: '',
+                tips: {}
+            },
+            demo6: {
                 userContact: '',
                 tips:'',
             },
-            demo5: {
+            demo7: {
                 pwd:'',
                 tips: '',
             }
@@ -161,7 +184,7 @@
                         el: _this.demo1.userContact,
                         //校验的规则
                         rules: [
-                            {rule: 'isNoNull', msg: '联系方式不能为空'}, {rule: 'isMobile,isEmail', msg: '请输入正确的联系方式'}
+                            {rule: 'isNoNull', msg: '联系方式不能为空'}, {rule: 'isMobile', msg: '请输入正确的联系方式'}
                         ]
                     }
                 ])
@@ -169,12 +192,10 @@
             },
             handleSubmit2(){
                 let _this = this;
-                //在校验数组里面加上alias字段，保存错误信息。该字段要保证值唯一性，并且要么全部加上，要么全部不加，不然可能会造成页面错误
                 let _tips=ecValidate.check([
                     {
                         //校验的数据
                         el: _this.demo2.userName,
-                        alias: 'userName',
                         //校验的规则
                         rules: [
                             {rule: 'isNoNull', msg: '姓名不能为空'}
@@ -183,7 +204,6 @@
                     {
                         //校验的数据
                         el: _this.demo2.userContact,
-                        alias: 'contact',
                         //校验的规则
                         rules: [
                             {rule: 'isNoNull', msg: '联系方式不能为空'}, {rule: 'isMobile,isEmail', msg: '请输入正确的联系方式'}
@@ -192,15 +212,28 @@
                 ])
                 this.demo2.tips = _tips;
             },
-
-
             handleSubmit3(){
                 let _this = this;
-                //checkAll校验全部的函数，必须要加上alias字段。
-                let _tips=ecValidate.checkAll([
+                let _tips=ecValidate.check([
                     {
                         //校验的数据
                         el: _this.demo3.userName,
+                        //校验的规则
+                        rules: [
+                            {rule: 'isNoNull', msg: '姓名不能为空'},
+                            {rule: 'isChinese', msg: '姓名只能输出中文'}
+                        ],
+                    }
+                ])
+                this.demo3.tips = _tips;
+            },
+            handleSubmit4(){
+                let _this = this;
+                //在校验数组里面加上alias字段，保存错误信息。该字段要保证值唯一性，并且要么全部加上，要么全部不加，不然可能会造成页面错误
+                let _tips=ecValidate.check([
+                    {
+                        //校验的数据
+                        el: _this.demo4.userName,
                         alias: 'userName',
                         //校验的规则
                         rules: [
@@ -209,21 +242,6 @@
                     },
                     {
                         //校验的数据
-                        el: _this.demo3.userContact,
-                        alias: 'contact',
-                        //校验的规则
-                        rules: [
-                            {rule: 'isNoNull', msg: '联系方式不能为空'}, {rule: 'isMobile,isEmail', msg: '请输入正确的联系方式'}
-                        ]
-                    }
-                ])
-                this.demo3.tips = _tips;
-            },
-            handleSubmit4(){
-                let _this = this;
-                let _tips=ecValidate.checkAll([
-                    {
-                        //校验的数据
                         el: _this.demo4.userContact,
                         alias: 'contact',
                         //校验的规则
@@ -234,34 +252,65 @@
                 ])
                 this.demo4.tips = _tips;
             },
-            handleInput4(){
+            handleSubmit5(){
+                let _this = this;
+                //checkAll校验全部的函数，必须要加上alias字段。
+                let _tips=ecValidate.checkAll([
+                    {
+                        //校验的数据
+                        el: _this.demo5.userName,
+                        alias: 'userName',
+                        //校验的规则
+                        rules: [
+                            {rule: 'isNoNull', msg: '姓名不能为空'}
+                        ],
+                    },
+                    {
+                        //校验的数据
+                        el: _this.demo5.userContact,
+                        alias: 'contact',
+                        //校验的规则
+                        rules: [
+                            {rule: 'isNoNull', msg: '联系方式不能为空'}, {rule: 'isMobile,isEmail', msg: '请输入正确的联系方式'}
+                        ]
+                    }
+                ])
+                this.demo5.tips = _tips;
+            },
+            handleInput6(){
                 let _this = this;
                 let _tips=ecValidate.check([
                     {
                         //校验的数据
-                        el: _this.demo4.userContact,
+                        el: _this.demo6.userContact,
                         //校验的规则
                         rules: [
                             {rule: 'isNoNull', msg: '联系方式不能为空'}, {rule: 'isMobile,isEmail', msg: '请输入正确的联系方式'}
                         ]
                     },
                 ])
-                this.demo4.tips = _tips;
+                this.demo6.tips = _tips;
             },
-            handleInput5(){
+            handleInput7(){
                 let _this = this;
                 let _tips=ecValidate.check([
                     {
                         //校验的数据
-                        el: _this.demo5.pwd,
+                        el: _this.demo7.pwd,
                         //校验的规则
                         rules: [
                             {rule: 'pwdLv'}
                         ]
                     },
                 ])
-                this.demo5.tips = +_tips;
+                this.demo7.tips = +_tips;
             }
+        },
+        mounted:function () {
+//            //添加扩展规则
+//            ecValidate.addRule('isChinese',function (val, msg) {
+//                return !/^[\u4E00-\u9FA5]+$/.test(val) ? msg : '';
+//            })
         }
     })
 </script>
